--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
 	"devDependencies": {
 		"@biomejs/biome": "^1.8.3",
 		"@types/node": "^20.14.12",
+		"husky": "^9.1.4",
 		"tsx": "^4.16.2",
 		"typescript": "^5.5.4"
 	},
@@ -23,8 +24,5 @@
 		"knex": "^3.1.0",
 		"sqlite3": "^5.1.7",
 		"zod": "^3.23.8"
-	},
-	"overrides": {
-		"eslint": "^9.7.0"
 	}
 }
